--- a/studentmgmt/templates/register.html
+++ b/studentmgmt/templates/register.html
@@ -11,6 +11,8 @@
         {% csrf_token %}
         {{form.as_p}}
         <button type="submit">Register</button>
+        <a href="{% url 'login_page' %}"
+        >Login.</a>
     <form>
   </body>
 </html>
