admin CRUD for subject model

--- a/studentmgmt/templates/base.html
+++ b/studentmgmt/templates/base.html
@@ -25,9 +25,13 @@
 
     {%block subject%}{%if show_button%}
    <a href="/subject ">
-    <button>Check subjects</button></a></div></br>
+    <button>Check subjects</button></a></div></br></br>
   </a>{%endif%}{%endblock%}
   
+  {%block classroom%}{%if show_button%}
+  <a href="/classroom ">
+   <button>Check classrooms</button></a></div></br>
+ </a>{%endif%}{%endblock%}
   </body>
 
 </html>
