--- a/studentmgmt/templates/login.html
+++ b/studentmgmt/templates/login.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
+
   </head>
   <body>
-    <h1>Login</h1>
-    <form method = 'POST' action="{% url 'login_page' %}">
+    <div>
+      <h1>Login</h1>
+      <form method = 'POST' action="{% url 'login_page' %}">
       {% csrf_token %}
       {{form.as_p}}
       <button type="submit">Log in</button></br>
-
     </form>
+  </div>
   </body>
 </html>
