request.FILES added to teaser_base_edit function

--- a/studentmgmt/templates/teacherbase.html
+++ b/studentmgmt/templates/teacherbase.html
@@ -66,7 +66,7 @@
         </table>
       </div>
    {%if form%}   
-  <form method="POST" action="{% url 'teacher_base_edit' instance.id %}">
+  <form method="POST" action="{% url 'teacher_base_edit' instance.id %}" enctype ="multipart/form-data">
     {%csrf_token%}
         {{form}}
         <button type = "submit">Update</button>
