--- a/studentmgmt/templates/register.html
+++ b/studentmgmt/templates/register.html
@@ -1,11 +1,16 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
     <title>Registration</title>
   </head>
   <body>
+    <div class ="conatiner login-box">
     <h1>Register Here</h1>
     <form method = 'POST' action="{% url 'register_page' %}">
         {% csrf_token %}
@@ -14,5 +19,6 @@
         <a href="{% url 'login_page' %}"
         >Login.</a>
     <form>
+      <div>
   </body>
 </html>
