--- a/studentmgmt/templates/student.html
+++ b/studentmgmt/templates/student.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block student %}
+<section style= "margin-top:80px;">
 <h1>Students</h1>
 <table>
     <thead>
@@ -45,5 +46,6 @@
   <button type="submit">Submit</button>
 </form>
 </div>
+</section>
 {%endif%}
 {% endblock %}
