--- a/studentmgmt/templates/teacher.html
+++ b/studentmgmt/templates/teacher.html
@@ -1,6 +1,7 @@
+
 {% extends 'base.html' %} {% block teacher %}
     
-<section style="margin-top:160px;">
+<section>
 <h1>Teacher</h1>
 
       {% if edit_form %}
@@ -13,7 +14,7 @@
           </form>
       </div>
       {% else %}
-      <table>
+      <table style="margin-top:500px;">
         <thead>
             <tr>
                 <th> Name</th>
