teacher allowed to update grades

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,9 +8,9 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
     height: 100vh;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 
 h1 {
@@ -88,6 +88,14 @@ th,
 td {
     border: 1px solid;
 }
+
+.messages{
+    margin-top:10px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
 /* .update-box {
     background-color: white;
     padding: 30px;
