--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,9 +8,9 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
     height: 100vh;
-    /* display: flex;
+    display: flex;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
 }
 
 h1 {
