--- a/studentmgmt/templates/teacher_grade.html
+++ b/studentmgmt/templates/teacher_grade.html
@@ -36,7 +36,7 @@
     {% csrf_token %} 
     {{ form.as_p}}
 
-    <button type="submit">Submit</button>
+    <button style= "width:80px;" type="submit">Submit</button>
   </form>
 </div>
 
