--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,16 @@ h1 {
     margin-bottom: 10px;
     color: #333;
 }
-
+.table-marks{
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+  th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 5px;
+    text-align: left;
+  }
 nav {
     background-color: #9c9c9c;
     color: white;
