--- a/studentmgmt/templates/student_marksheet.html
+++ b/studentmgmt/templates/student_marksheet.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student Management</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <style>
+      table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+    }
+    th, td {
+      padding: 5px;
+      text-align: left;
+    }
+    </style>
   </head>
   <body>
-    <h2>Student Marksheet of "{{student.s_name}}"</h2>
+    <nav>
+      <h2>Student Marksheet of "{{student.s_name}}"</h2>
+      <a href="{% url 'logout' %}"><button >Log Out</button></a></div></br></br>
 
-    <table>
+    </nav>
+    <table class="table-marks">
       <thead>
         <tr>
           <th>Subject</th>
@@ -19,12 +31,16 @@
         </tr>
       </thead>
       <tbody>
-        {% for data in marks_data %}
+        {%if marks_data%} {% for data in marks_data %}
         <tr>
           <td>{{ data.subject }}</td>
           <td>{{ data.marks }}</td>
+
+          {% endfor %} {%else%}
+          <td>No Subject available</td>
+          <td>No Grade available</td>
         </tr>
-        {% endfor %}
+        {%endif%}
       </tbody>
     </table>
   </body>
