--- a/studentmgmt/templates/studentbase.html
+++ b/studentmgmt/templates/studentbase.html
@@ -24,6 +24,7 @@
     <nav>
       <h1>Welcome "{{user.username}}"</h1>
       <a href="{% url 'logout' %}"><button >Log Out</button></a></div></br></br>
+      <a href="{% url 'change_password' %}"><button >Change password</button></a>
     </nav>
 
     <div>
@@ -52,7 +53,9 @@
         <tr>
           <th>Email</th>
           <td>{{user.email}}</td>
-        </tr><tr><th>Marksheet</th>
+        </tr>
+        <tr>
+        <th>Marksheet</th>
         <td><a href = "{% url 'student_marksheet' student.id%}">View</a></td>
         </tr>
         </table></br>
